src/index.css
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
@import "tailwindcss";
@variant dark (&:where(.dark, .dark *));

@theme {
  --color-custom-bg-card: #373b53;
  --color-custom-bg-white: white;
  --color-custom-accent: #7c5dfa;
  --color-custom-secondary: #888eb0;
  --color-custom-tetiary: #f9fafe;

  --color-custom-border: #494e6e;

  --color-custom-success: #33d69f;
  --color-custom-warning: #ff8f00;
  --color-custom-error: #ec5757;

  --color-custom-text-dark: #0c0e16;
  --color-custom-text-primary: #888eb0;
  --color-custom-text-secondary: #858bb2;
  --color-custom-text-tertiary: #7e88c3;
}

.dark {
  --color-custom-bg-white: #141625;
  --color-custom-bg-card: #1e2139;
  --color-custom-accent: #7c5dfa;
  --color-custom-secondary: #888eb0;
  --color-custom-tetiary: #252945;

  --color-custom-border: #494e6e;

  --color-custom-success: #33d69f;
  --color-custom-warning: #ff8f00;
  --color-custom-error: #ec5757;

  --color-custom-text-dark: #ffffff;
  --color-custom-text-primary: #dfe3fa;
  --color-custom-text-secondary: #ffffff;
  --color-custom-text-tertiary: #888eb0;
}

body {
  font-family: "League Spartan", sans-serif;
  color: var(--color-custom-text-dark);
  transition: 0.5s all;
}
h1 {
  font-size: 24px;
  font-weight: 700;
}
p {
  font-size: 15px;
  font-weight: 700;
}
p.little {
  font-size: 13px;
  font-weight: 500;
}
p.bold {
  font-size: 15px;
  font-weight: 700;
}
.dark input,
select {
  border: 0;
}
.dark .tb {
  background-color: #0c0e16;
}
.dark .card {
  background-color: var(--color-custom-bg-card);
}
.card {
  background-color: var();
  box-shadow: 0px 10px 10px rgba(72, 84, 159, 0.1);
  padding: 24px;
  border-radius: 8px;
}

